# one_night_stand

./: .gitignore  docker-compose.yaml  package-lock.json  package.json  readme.md
.github/workflows/: api_deploy.yaml  (+2 more)
api/: .dockerignore  .gitignore  Dockerfile  api_schema.md  entrypoint.sh  pyproject.toml  readme.md
api/ai/: ai_model.py  ai_real_time.py  ai_recommendation.py  fake_data_generator.py
api/cards/: admin.py  models.py  serializers.py  urls.py  views.py
api/cards/ai/: ai_collaborative.py  ai_model.py  ai_real_time.py  ai_recommendation.py  fake_data_generator.py  helpers.py
api/cards/migrations/: 0001_initial.py  0002_comment_is_positive.py  0003_tag_remove_card_tags_card_tags.py  0004_card_difficulty_card_expected_time.py  0005_cardimage_card_image.py
api/channels/: admin.py  models.py  serializers.py  urls.py  views.py
api/channels/migrations/: 0001_initial.py  0002_channel_cards.py
api/config/: settings.py  spectacular_settings.py  urls.py
api/fixtures/: cards.json  followers.json  users.json
api/static/css/: custom_admin.css
api/users/: admin.py  models.py  serializers.py  urls.py  views.py
api/users/migrations/: 0001_initial.py  0002_superuser.py  0003_follower.py  0004_alter_follower_unique_together.py  0005_customuser_preferences.py
api/utils/: pagination.py
app/: Dockerfile  default.conf  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.json  vite.config.ts
envs/: api.default.env  api.env  postgres.default.env  postgres.env
proxy/: Dockerfile  default.conf
(+80 files in other folders)
