[tool.poetry]
name = "FlipAcademy API"
version = "0.1.0"
description = "To be done"
authors = ["Azeno team"]
license = "To be set"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.6"
Django = "5.0.9"
black = "24.8.0"
psycopg = "3.2.2"
dj-database-url = "2.2.0"
whitenoise = "6.7.0"
djangorestframework = "3.15.2"
djangorestframework-simplejwt = "5.3.1"
drf-spectacular = "0.27.2"
openai = "1.47.0"
django-filter = "24.3"
pillow = "10.4.0"
django-jazzmin = "3.0.0"
gunicorn = "23.0.0"
django-storages = "^1.14.4"
azure-storage-blob = "^12.23.1"
scikit-learn = "^1.5.2"
pandas = "^2.2.3"
tensorflow = "^2.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
